cabal-version:       2.2
name:                hslua-aeson
version:             2.3.1.1
synopsis:            Allow aeson data types to be used with Lua.
description:         This package provides instances to push and receive any
                     datatype encodable as JSON to and from the Lua stack.
homepage:            https://hslua.org/
license:             MIT
license-file:        LICENSE
author:              Albert Krewinkel
maintainer:          Albert Krewinkel <tarleb@hslua.org>
copyright:           © 2017–2024 Albert Krewinkel
category:            Foreign
extra-source-files:  README.md
                   , CHANGELOG.md
tested-with:         GHC == 9.6
                   , GHC == 9.8
                   , GHC == 9.10
                   , GHC == 9.12

source-repository head
  type:                git
  location:            https://github.com/hslua/hslua
  subdir:              hslua-aeson

common common-options
  default-language:    Haskell2010
  build-depends:       base                 >= 4.11   && < 5
                     , aeson                >= 2.0    && < 2.3
                     , hslua-core           >= 2.0    && < 2.4
                     , hslua-marshalling    >= 2.1    && < 2.4
                     , scientific           >= 0.3    && < 0.4
                     , vector               >= 0.7    && < 0.14
  default-extensions:  BangPatterns
                     , LambdaCase
                     , OverloadedStrings
                     , TypeApplications
  ghc-options:         -Wall
                       -Wcpp-undef
                       -Werror=missing-home-modules
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wnoncanonical-monad-instances
                       -Wpartial-fields
                       -Wredundant-constraints
                       -fhide-source-paths
  if impl(ghc >= 8.10)
    ghc-options:         -Wunused-packages
  if impl(ghc >= 9.0)
    ghc-options:         -Winvalid-haddock

library
  import:              common-options
  exposed-modules:     HsLua.Aeson
  hs-source-dirs:      src
  build-depends:       bytestring           >= 0.10.2 && < 0.13
  default-language:    Haskell2010

test-suite test-hslua-aeson
  import:              common-options
  type:                exitcode-stdio-1.0
  main-is:             test-hslua-aeson.hs
  hs-source-dirs:      test
  build-depends:       hslua-aeson
                     , aeson                >= 2.0.3  && < 2.3
                     , QuickCheck
                     , quickcheck-instances
                     , tasty                >= 0.11
                     , tasty-quickcheck     >= 0.8
                     , tasty-hunit          >= 0.10
                     , text                 >= 1.2    && < 2.2
  ghc-options:         -threaded
  default-language:    Haskell2010
