cabal-version:       2.2
name:                hslua-cli
version:             1.4.4
synopsis:            Command-line interface for Lua
description:         Provides an embeddable command-line interface for Lua.
                     The interface is compatible with the standard Lua
                     interpreter, i.e., the `lua` executable provided in a
                     default Lua installation.
homepage:            https://hslua.org/
bug-reports:         https://github.com/hslua/hslua/issues
license:             MIT
license-file:        LICENSE
author:              Albert Krewinkel
maintainer:          Albert Krewinkel <tarleb@hslua.org>
copyright:           © 2022-2026 Albert Krewinkel
category:            Foreign
build-type:          Simple
extra-doc-files:     README.md
                     CHANGELOG.md
tested-with:         GHC == 9.6
                   , GHC == 9.8
                   , GHC == 9.10
                   , GHC == 9.12

source-repository head
  type:                git
  location:            https://github.com/hslua/hslua
  subdir:              hslua-cli

Flag executable
  description:         Compile `hslua` standalone executable.
  default:             False

common common-options
  build-depends:       base              >= 4.9.1  && < 5
                     , hslua-core        >= 2.3    && < 2.4

  ghc-options:         -Wall
                       -Wcpp-undef
                       -Werror=missing-home-modules
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wnoncanonical-monad-instances
                       -Wpartial-fields
                       -Wredundant-constraints
                       -fhide-source-paths
  if impl(ghc >= 8.10)
    ghc-options:       -Wunused-packages
  if impl(ghc >= 9.0)
    ghc-options:       -Winvalid-haddock

  default-language:    Haskell2010

library
  import:              common-options
  hs-source-dirs:      src
  exposed-modules:     HsLua.CLI
  build-depends:       base              >= 4.11   && < 5
                     , bytestring        >= 0.10.2 && < 0.13
                     , hslua-marshalling >= 2.2    && < 2.4
                     , hslua-repl        >= 0.1    && < 0.2
                     , lua               >= 2.3    && < 2.4
                     , text              >= 1.2    && < 2.2
  if !os(windows)
    build-depends:     unix              >= 2.7    && < 2.9
  if os(windows)
    cpp-options:         -D_WINDOWS

executable hslua
  import:              common-options
  hs-source-dirs:      app
  main-is:             hslua.hs
  ghc-options:         -rtsopts -with-rtsopts=-A8m -threaded
  if flag(executable)
    buildable:           True
    build-depends:       hslua-cli
  else
   buildable:            False
