cabal-version:       2.2
name:                hslua-list
version:             1.1.2
synopsis:            Opinionated, but extensible Lua list type.
description:         List type for Lua, with a Haskell interface.
homepage:            https://hslua.org/
bug-reports:         https://github.com/hslua/hslua/issues
license:             MIT
license-file:        LICENSE
author:              Albert Krewinkel
maintainer:          Albert Krewinkel <tarleb@hslua.org>
copyright:           © 2022-2024 Albert Krewinkel
category:            Foreign
build-type:          Simple
extra-doc-files:     README.md
                     CHANGELOG.md
extra-source-files:  test/test-list.lua
tested-with:         GHC == 8.4.4
                   , GHC == 8.6.5
                   , GHC == 8.8.4
                   , GHC == 8.10.7
                   , GHC == 9.0.2
                   , GHC == 9.2.8
                   , GHC == 9.4.8
                   , GHC == 9.6.5
                   , GHC == 9.8.2
                   , GHC == 9.10.1

source-repository head
  type:                git
  location:            https://github.com/hslua/hslua
  subdir:              hslua-list

common common-options
  build-depends:       base                  >= 4.9.1  && < 5
                     , hslua-core            >= 2.2    && < 2.4
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
  if impl(ghc >= 8.0)
    ghc-options:       -Wredundant-constraints
  if impl(ghc >= 8.2)
    ghc-options:       -fhide-source-paths
  if impl(ghc >= 8.4)
    ghc-options:       -Wmissing-export-lists
                       -Wpartial-fields
  if impl(ghc >= 8.10)
    ghc-options:       -Wunused-packages
  if impl(ghc >= 9.0)
    ghc-options:       -Winvalid-haddock

  default-language:    Haskell2010

library
  import:              common-options
  hs-source-dirs:      src
  c-sources:           cbits/listmod.c
  exposed-modules:     HsLua.List
  build-depends:       bytestring

test-suite hslua-list-test
  import:              common-options
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             test-hslua-list.hs
  build-depends:       hslua-list
                     , tasty                 >= 0.11
                     , tasty-lua             >= 1.0
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N
