cabal-version:       2.2
name:                hslua-marshalling
version:             2.2.1
synopsis:            Marshalling of values between Haskell and Lua.
description:         Provides functions to marshal values from Haskell
                     to Lua, and /vice versa/.
                     .
                     This package is part of HsLua, a Haskell framework
                     built around the embeddable scripting language
                     <https://lua.org Lua>.
homepage:            https://hslua.org/
bug-reports:         https://github.com/hslua/hslua/issues
license:             MIT
license-file:        LICENSE
author:              Albert Krewinkel, Gracjan Polak, Ömer Sinan Ağacan
maintainer:          albert+hslua@zeitkraut.de
copyright:           © 2007–2012 Gracjan Polak;
                     © 2012–2016 Ömer Sinan Ağacan;
                     © 2017-2022 Albert Krewinkel
category:            Foreign
extra-source-files:  README.md
                   , CHANGELOG.md
tested-with:         GHC == 8.0.2
                   , GHC == 8.2.2
                   , GHC == 8.4.4
                   , GHC == 8.6.5
                   , GHC == 8.8.4
                   , GHC == 8.10.7
                   , GHC == 9.0.2
                   , GHC == 9.2.3

source-repository head
  type:                git
  location:            https://github.com/hslua/hslua.git
  subdir:              hslua-marshalling

common common-options
  default-language:    Haskell2010
  build-depends:       base              >= 4.8    && < 5
                     , bytestring        >= 0.10.2 && < 0.12
                     , containers        >= 0.5.9  && < 0.7
                     , hslua-core        >= 2.2.1  && < 2.3
                     , mtl               >= 2.2    && < 2.4
                     , text              >= 1.2    && < 2.1
  ghc-options:         -Wall
                       -Wincomplete-record-updates
                       -Wnoncanonical-monad-instances
                       -Wredundant-constraints
  if impl(ghc >= 8.2)
    ghc-options:         -Wcpp-undef
                         -Werror=missing-home-modules
  if impl(ghc >= 8.4)
    ghc-options:         -Widentities
                         -Wincomplete-uni-patterns
                         -Wpartial-fields
                         -fhide-source-paths

library
  import:              common-options
  exposed-modules:     HsLua.Marshalling
                     , HsLua.Marshalling.Peek
                     , HsLua.Marshalling.Peekers
                     , HsLua.Marshalling.Push
                     , HsLua.Marshalling.Userdata
  hs-source-dirs:      src
  default-extensions:  LambdaCase
                     , StrictData
  other-extensions:    DeriveDataTypeable
                     , DeriveFunctor
                     , OverloadedStrings
                     , TypeApplications

test-suite test-hslua
  import:              common-options
  type:                exitcode-stdio-1.0
  main-is:             test-hslua-marshalling.hs
  hs-source-dirs:      test
  ghc-options:         -threaded -Wno-unused-do-bind
  other-modules:       HsLua.MarshallingTests
                     , HsLua.Marshalling.PeekTests
                     , HsLua.Marshalling.PeekersTests
                     , HsLua.Marshalling.PushTests
                     , HsLua.Marshalling.UserdataTests
  build-depends:       hslua-marshalling
                     , lua-arbitrary        >= 1.0
                     , QuickCheck           >= 2.7
                     , quickcheck-instances >= 0.3
                     , tasty-hslua
                     , tasty                >= 0.11
                     , tasty-hunit          >= 0.9
                     , tasty-quickcheck     >= 0.8
  other-extensions:    DeriveDataTypeable
                     , LambdaCase
                     , OverloadedStrings
                     , TypeApplications
