cabal-version:       2.2
name:                hslua-module-path
version:             1.0.2
synopsis:            Lua module to work with file paths.
description:         Lua module to work with file paths in a platform
                     independent way.
homepage:            https://hslua.org/
bug-reports:         https://github.com/hslua/hslua/issues
license:             MIT
license-file:        LICENSE
author:              Albert Krewinkel
maintainer:          Albert Krewinkel <albert@zeitkraut.de>
copyright:           © 2020-2022 Albert Krewinkel
category:            Foreign
build-type:          Simple
extra-doc-files:     README.md
                     CHANGELOG.md
extra-source-files:  test/test-path.lua
tested-with:         GHC == 8.0.2
                   , GHC == 8.2.2
                   , GHC == 8.4.4
                   , GHC == 8.6.5
                   , GHC == 8.8.4
                   , GHC == 8.10.7
                   , GHC == 9.0.1
                   , GHC == 9.2.1

source-repository head
  type:                git
  location:            https://github.com/hslua/hslua
  subdir:              hslua-module-path

common common-options
  build-depends:       base              >= 4.9.1  && < 5
                     , filepath          >= 1.4    && < 1.5
                     , hslua-core        >= 2.1    && < 2.3
                     , hslua-marshalling >= 2.1    && < 2.3
                     , hslua-packaging   >= 2.1    && < 2.3
                     , text              >= 1.2    && < 2.1

  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
  if impl(ghc >= 8.0)
    ghc-options:       -Wredundant-constraints
  if impl(ghc >= 8.2)
    ghc-options:       -fhide-source-paths
  if impl(ghc >= 8.4)
    ghc-options:       -Wmissing-export-lists
                       -Wpartial-fields
  if impl(ghc >= 8.8)
    ghc-options:       -Wmissing-deriving-strategies

  default-language:    Haskell2010

library
  import:              common-options
  hs-source-dirs:      src
  exposed-modules:     HsLua.Module.Path

test-suite hslua-module-path-test
  import:              common-options
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             test-hslua-module-path.hs
  build-depends:       base
                     , hslua-module-path
                     , tasty
                     , tasty-hunit
                     , tasty-lua  >= 1.0    && < 1.1
                     , text
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N
