cabal-version:       2.2
name:                hslua-module-path
version:             1.1.2
synopsis:            Lua module to work with file paths.
description:         Lua module to work with file paths in a platform
                     independent way.
homepage:            https://hslua.org/
bug-reports:         https://github.com/hslua/hslua/issues
license:             MIT
license-file:        LICENSE
author:              Albert Krewinkel
maintainer:          Albert Krewinkel <tarleb@hslua.org>
copyright:           © 2020-2024 Albert Krewinkel
category:            Foreign
build-type:          Simple
extra-doc-files:     README.md
                     CHANGELOG.md
extra-source-files:  test/test-path.lua
tested-with:         GHC == 8.8.4
                   , GHC == 8.10.7
                   , GHC == 9.0.2
                   , GHC == 9.2.8
                   , GHC == 9.4.8
                   , GHC == 9.6.7
                   , GHC == 9.8.4
                   , GHC == 9.10.2
                   , GHC == 9.12.2

source-repository head
  type:                git
  location:            https://github.com/hslua/hslua
  subdir:              hslua-module-path

common common-options
  build-depends:       base              >= 4.9.1  && < 5
                     , hslua-core        >= 2.1    && < 2.4
                     , hslua-packaging   >= 2.3    && < 2.5

  ghc-options:         -Wall
                       -Wcpp-undef
                       -Werror=missing-home-modules
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wnoncanonical-monad-instances
                       -Wpartial-fields
                       -Wredundant-constraints
                       -fhide-source-paths
  if impl(ghc >= 8.10)
    ghc-options:         -Wunused-packages
  if impl(ghc >= 9.0)
    ghc-options:         -Winvalid-haddock

  default-language:    Haskell2010

library
  import:              common-options
  hs-source-dirs:      src
  exposed-modules:     HsLua.Module.Path
  build-depends:       filepath          >= 1.4    && < 1.6
                     , hslua-marshalling >= 2.1    && < 2.4
                     , text              >= 1.2    && < 2.2

test-suite hslua-module-path-test
  import:              common-options
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             test-hslua-module-path.hs
  build-depends:       base
                     , hslua-module-path
                     , tasty
                     , tasty-hunit
                     , tasty-lua         >= 1.0    && < 1.2
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N
